crates/compiler/parse/tests/snapshots/fail/list_pattern_weird_indent.expr.roc
when [] is
    [1, 2,
3] -> ""
